WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180197
[GStreamer] Ensure SleepDisabler is not held by pages in page cache
https://bugs.webkit.org/show_bug.cgi?id=180197
Summary
[GStreamer] Ensure SleepDisabler is not held by pages in page cache
Michael Catanzaro
Reported
2017-11-30 07:20:34 PST
After implementing PAL::SleepDisabler for GTK in
bug #178485
, I decided to try removing the early return at the top of HTMLMediaElement::shouldDisableSleep for non-Cocoa ports, hoping that HTMLMediaElement would create a SleepDisabler during video playback and destroy it at the end of video playback, to keep the display from turning off when a video is playing. I tested it on youtube.com and noticed the following unexpected behavior: (1) When playing a video on YouTube, no SleepDisabler is initially created during normal video playback, so the display will turn off undesirably. (2) But a SleepDisabler *is* created when pressing the browser's Back button during video playback. (3) The SleepDisabler is then only destroyed when (a) closing the browser tab that had been displaying YouTube, or (b) when pressing Forward to bring back the original YouTube page. So I think monitor sleep is disabled when the YouTube page is in the page cache, and not reenabled until the page exits the page cache. That's not good! I wonder if this is a GTK-specific problem, or if it's also broken on macOS and iOS.
Attachments
Patch
(11.46 KB, patch)
2018-01-09 04:47 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(2.29 KB, patch)
2018-01-09 05:09 PST
,
Philippe Normand
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-12-12 18:20:20 PST
> So I think monitor sleep is disabled when the YouTube page is in the page > cache, and not reenabled until the page exits the page cache. That's not > good! I wonder if this is a GTK-specific problem, or if it's also broken on > macOS and iOS.
This works as expected in macOS and iOS for YouTube so there might be something specific to GTK. Maybe some debugging would help here to know why there is no SleepDisabler in the first place when clicking play/pause...
Philippe Normand
Comment 2
2018-01-09 02:50:44 PST
Michael can you upload your patch? Did you implement MediaPlayerPrivate::setShouldDisableSleep() too?
Philippe Normand
Comment 3
2018-01-09 03:31:41 PST
The problem seems to be with that line for the GStreamer ports: bool shouldBeAbleToSleep = !hasVideo() || !hasAudio(); the value is true, so that's why no sleep disabler is created. This is likely an issue with the GStreamer backend. I suspect the pipeline is not fully built when this code is called.
Philippe Normand
Comment 4
2018-01-09 04:47:05 PST
Created
attachment 330811
[details]
Patch
Carlos Garcia Campos
Comment 5
2018-01-09 04:58:06 PST
Comment on
attachment 330811
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=330811&action=review
> Source/WebCore/ChangeLog:13 > + The sleep disabler is now checked again whenever the media player > + playback state or other charasteristic has changed in the media > + engine. On GStreamer backend side we now properly emit playback > + state changes and characteristic updates to the client when the > + pipeline state changes and when audio/video tracks changes are > + detected.
The GST part is related but independent, right? I would split the patch.
Philippe Normand
Comment 6
2018-01-09 05:09:40 PST
Created
attachment 330812
[details]
Patch
Philippe Normand
Comment 7
2018-01-09 05:57:41 PST
Hi Eric, can you please review this patch?
Philippe Normand
Comment 8
2018-01-09 06:44:31 PST
Committed
r226630
: <
https://trac.webkit.org/changeset/226630
>
Radar WebKit Bug Importer
Comment 9
2018-01-09 06:46:20 PST
<
rdar://problem/36374983
>
Michael Catanzaro
Comment 10
2018-01-09 08:04:30 PST
Note this change does more than indicated by the commit message: media playback now (hopefully) causes sleep to be disabled for the first time. That is great! Thanks!
Michael Catanzaro
Comment 11
2018-01-22 07:20:06 PST
This has uncovered a bug in GNOME:
https://bugzilla.gnome.org/show_bug.cgi?id=705942#c12
WebKit is now doing the right thing, so I don't suggest we change anything.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug